--- a/config.yaml
+++ b/config.yaml
@@ -8,20 +8,20 @@
 # lc: Library Carpentry
 # cp: Carpentries (to use for instructor training for instance)
 # incubator: The Carpentries Incubator
-carpentry: 'incubator'
+carpentry: 'cp'
 
 # Overall title for pages.
 title: 'Fundamentals of Programming - Curtin University'
 
 # Date the lesson was created (YYYY-MM-DD, this is empty by default)
-created: 2023-02-27
+created: ~
 
 # Comma-separated list of keywords for the lesson
-keywords: 'software, data, lesson, The Carpentries'
+keywords: 'programming, python, lesson, COMP1005'
 
 # Life cycle stage of the lesson
 # possible values: pre-alpha, alpha, beta, stable
-life_cycle: 'pre-alpha'
+life_cycle: 'beta'
 
 # License of the lesson
 license: 'CC-BY 4.0'
@@ -60,6 +60,8 @@ contact: 'COMP1005@curtin.edu.au'
 # Order of episodes in your lesson
 episodes: 
 - introduction.Rmd
+- practical-0.Rmd
+- practical-1.Rmd
 
 # Information for Learners
 learners: 
