--- a/config.yaml
+++ b/config.yaml
@@ -17,7 +17,7 @@ title: 'Fundamentals of Programming - Curtin University'
 created: ~
 
 # Comma-separated list of keywords for the lesson
-keywords: 'programming, python, lesson, COMP1005'
+keywords: 'programming, python, COMP1005'
 
 # Life cycle stage of the lesson
 # possible values: pre-alpha, alpha, beta, stable
@@ -27,7 +27,7 @@ life_cycle: 'beta'
 license: 'CC-BY 4.0'
 
 # Link to the source repository for this lesson
-source: 'https://github.com/carpentries/workbench-template-rmd'
+source: 'https://github.com/COMP1005/COMP1005.github.io'
 
 # Default branch of your lesson
 branch: 'main'
@@ -59,9 +59,9 @@ contact: 'COMP1005@curtin.edu.au'
 
 # Order of episodes in your lesson
 episodes: 
-- introduction.md
-- practical-00.md
-- practical-01.md
+- introduction.Rmd
+- practical-00.Rmd
+- practical-01.Rmd
 
 # Information for Learners
 learners: 
