--- a/config.yaml
+++ b/config.yaml
@@ -60,8 +60,7 @@ contact: 'COMP1005@curtin.edu.au'
 # Order of episodes in your lesson
 episodes: 
 - prac00.md
-- practical-00.Rmd
-- practical-01.Rmd
+- prac01.md
 
 # Information for Learners
 learners: 
