--- a/config.yaml
+++ b/config.yaml
@@ -64,9 +64,11 @@ episodes:
 
 # Information for Learners
 learners: 
+- setup.md
 
 # Information for Instructors
 instructors: 
+- setup.md
 
 # Learner Profiles
 profiles: 
